--- a/app/abstracts/_variables.scss
+++ b/app/abstracts/_variables.scss
@@ -34,9 +34,8 @@ $text-color-primary:         #fff;
 $text-color-secondary:       #141414;
 $text-color-yellow:          #FEDC56;
 
+// Background Colors
+$background-color-primary:   #222121;
+
 // Border/Placeholder-Colors
 $border-placeholder-color:   #C2C2C2;
-
-$background-color-base:      #FFF;
-$background-color-primary:   #d97144;
-$background-color-secondary: #f7f7f7;
