--- a/app/abstracts/_mixins.scss
+++ b/app/abstracts/_mixins.scss
@@ -67,7 +67,7 @@
 
 %background-image-setup {
   max-width: 100%;
-  background-color: #222121;
+  background-color: var.$background-color-primary;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -78,4 +78,9 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+}
+
+%w-100-h-100 {
+  width: 100%;
+  height: 100vh;
 }
