--- a/app/components/css/_home.scss
+++ b/app/components/css/_home.scss
@@ -8,9 +8,8 @@
   .wrapper {
     @extend %wrap;
     @extend %flex-between-column;
+    @extend %w-100-h-100;
     text-align: center;
-    width: 100%;
-    height: 100vh;
     padding: 2rem 0;
     h3 {
       padding-top: 2rem;
