--- a/app/abstracts/_variables.scss
+++ b/app/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $font-size-big:              rem-calc(26);
 
 $heading-size-tiny:          rem-calc(25);
 $heading-size-small:         rem-calc(28);
+$heading-size-medium:        rem-calc(36);
 $heading-size-big:           rem-calc(44);
 $heading-size-bigger:        rem-calc(60);
 
@@ -24,7 +25,7 @@ $font-weight-base:           $font-weight-normal;
 
 // Size settings
 $gutter-base:                rem-calc(30);
-$border-radius:              0.3rem;
+$border-radius:              0.8rem;
 $card-border-radius:         2rem;
 
 // Text-transform
@@ -37,6 +38,7 @@ $text-color-yellow:          #FEDC56;
 
 // Background Colors
 $background-color-primary:   #222121;
+$background-color-secondary: #141414;
 
 // Border/Placeholder-Colors
 $border-placeholder-color:   #ececec;
