--- a/app/abstracts/_variables.scss
+++ b/app/abstracts/_variables.scss
@@ -35,6 +35,7 @@ $text-transform-uppercase:   uppercase;
 $text-color-primary:         #fff;
 $text-color-secondary:       #141414;
 $text-color-yellow:          #FEDC56;
+$text-color-gray:            #cacaca;
 
 // Background Colors
 $background-color-primary:   #222121;
