--- a/app/components/css/_discover.scss
+++ b/app/components/css/_discover.scss
@@ -55,8 +55,15 @@
         flex-wrap: wrap;
         margin-right: -15px;
         margin-bottom: -15px;
+        a {
+          color: var.$text-color-primary;
+          text-decoration: none;
+        }
         .card {
           width: 100%;
+          p {
+            color: var.$text-color-gray;
+          }
           @include mix.custom-tablet-styles {
             width: 50%;
           }
