--- a/app/abstracts/_mixins.scss
+++ b/app/abstracts/_mixins.scss
@@ -97,6 +97,12 @@
   flex-direction: column;
 }
 
+%flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 %flex-center-column {
   display: flex;
   justify-content: center;
