--- a/app/abstracts/_variables.scss
+++ b/app/abstracts/_variables.scss
@@ -42,4 +42,4 @@ $background-color-primary:   #222121;
 $background-color-secondary: #141414;
 
 // Border/Placeholder-Colors
-$border-placeholder-color:   #ececec;
+$border-placeholder-color:   #333333;
