--- a/app/abstracts/_mixins.scss
+++ b/app/abstracts/_mixins.scss
@@ -77,6 +77,9 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
+  z-index: 123123123;
+  position: fixed;
+  width: 100%;
 }
 
 %channel-background-image-setup {
