--- a/app/abstracts/_variables.scss
+++ b/app/abstracts/_variables.scss
@@ -43,3 +43,6 @@ $background-color-secondary: #141414;
 
 // Border/Placeholder-Colors
 $border-placeholder-color:   #333333;
+
+// Transition
+$transition:                   0.3s;
