--- a/app/components/css/_discover.scss
+++ b/app/components/css/_discover.scss
@@ -7,17 +7,11 @@
   background-color: var.$background-color-primary;
   color: var.$text-color-primary;
   padding-bottom: calc(61px + 1rem);
-  padding-top: 1rem;
   overflow-y: auto;
   .discover-wrapper {
     @extend %wrap;
     .discover-content {
-      .icon-profile-wrapper {
-        @extend %flex-between;
-        img {
-          border-radius: 50%;
-        }
-      }
+      
       .heading-wrapper {
         display: flex;
         h1 {
@@ -61,8 +55,8 @@
       .discover-content-wrapper {
         display: flex;
         flex-wrap: wrap;
-        margin-right: -15px;
-        margin-bottom: -15px;
+        margin-right: -1rem;
+        margin-bottom: -1rem;
         .card {
           width: 100%;
           p {
@@ -75,8 +69,8 @@
             width: 33.333%;
           }
           .card-inner {
-            margin-right: 15px;
-            margin-bottom: 15px;
+            margin-right: 1rem;
+            margin-bottom: 1rem;
             img {
               margin-bottom: 0.5rem;
               border-radius: var.$card-border-radius;
