--- a/app/components/css/_channel-page.scss
+++ b/app/components/css/_channel-page.scss
@@ -5,10 +5,11 @@
 .channel-page {
   color: var.$text-color-primary;
   background-color: var.$background-color-primary;
+  padding-bottom: calc(61px + 1rem);
   .channel-page-wrapper {
     @extend %wrap;
-    @extend %flex-between-column;
     @extend %w-100-h-100;
+    overflow-y: auto;
     .channel-page-content-two {
       @extend %flex-center-column;
       img {
@@ -19,6 +20,9 @@
         font-size: var.$font-size-small;
         color: var.$text-color-gray;
       }
+    }
+    .icon-profile-wrapper {
+      @extend %wrap;
     }
   }
 }
