--- a/app/global.css
+++ b/app/global.css
@@ -23,44 +23,13 @@ ul {
   list-style-type: none;
 }
 
-a {
-  color: #fff;
-  text-decoration: none;
-}
-
-img {
-  max-width: 100%;
-}
-
-h1 {
-  margin-bottom: 1rem;
-}
-
-h2 {
-  margin-bottom: 1rem;
-}
-
-p {
-  margin-bottom: 1rem;
-}
-
-.btn-primary {
-  border-radius: 0.8rem;
-  color: #141414;
-  background-color: #FEDC56;
-  font-weight: 700;
-  border: none;
-  padding: 0.7rem 2rem;
-  cursor: pointer;
-}
-
-.nav .nav-wrapper, .channel-page .channel-page-wrapper, .discover .discover-wrapper, .banner .wrapper {
+.channel-card-container, .nav .nav-wrapper, .channel-page .channel-page-wrapper, .channel-page .channel-page-wrapper .icon-profile-wrapper, .discover .discover-wrapper, .banner .wrapper {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
 @media (max-width: 1024px) {
-  .nav .nav-wrapper, .channel-page .channel-page-wrapper, .discover .discover-wrapper, .banner .wrapper {
+  .channel-card-container, .nav .nav-wrapper, .channel-page .channel-page-wrapper, .channel-page .channel-page-wrapper .icon-profile-wrapper, .discover .discover-wrapper, .banner .wrapper {
     width: 100%;
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -78,13 +47,13 @@ p {
   width: 100%;
 }
 
-.nav .nav-wrapper ul, .discover .discover-wrapper .discover-content .icon-profile-wrapper, .discover .discover-wrapper .discover-content .search-wrapper {
+.icon-profile-wrapper, .nav .nav-wrapper ul, .discover .discover-wrapper .discover-content .search-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.channel-page .channel-page-wrapper, .banner .wrapper {
+.banner .wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -101,6 +70,48 @@ p {
 .channel-page .channel-page-wrapper, .discover, .banner .wrapper {
   width: 100%;
   height: 100vh;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+h1 {
+  margin-bottom: 1rem;
+}
+
+h2 {
+  margin-bottom: 1rem;
+}
+
+h4 {
+  margin-bottom: 0.5rem;
+}
+
+p {
+  margin-bottom: 1rem;
+}
+
+.btn-primary {
+  border-radius: 0.8rem;
+  color: #141414;
+  background-color: #FEDC56;
+  font-weight: 700;
+  border: none;
+  padding: 0.7rem 2rem;
+  cursor: pointer;
+}
+@media (min-width: 1024px) {
+  .btn-primary:hover {
+    background-color: #141414;
+    color: #fff;
+    transition: 0.3s;
+  }
 }
 
 .banner {
@@ -122,11 +133,7 @@ p {
   background-color: #222121;
   color: #fff;
   padding-bottom: calc(61px + 1rem);
-  padding-top: 1rem;
   overflow-y: auto;
-}
-.discover .discover-wrapper .discover-content .icon-profile-wrapper img {
-  border-radius: 50%;
 }
 .discover .discover-wrapper .discover-content .heading-wrapper {
   display: flex;
@@ -174,8 +181,8 @@ p {
 .discover .discover-wrapper .discover-content .discover-content-wrapper {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -15px;
-  margin-bottom: -15px;
+  margin-right: -1rem;
+  margin-bottom: -1rem;
 }
 .discover .discover-wrapper .discover-content .discover-content-wrapper .card {
   width: 100%;
@@ -194,8 +201,8 @@ p {
   }
 }
 .discover .discover-wrapper .discover-content .discover-content-wrapper .card .card-inner {
-  margin-right: 15px;
-  margin-bottom: 15px;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
 }
 .discover .discover-wrapper .discover-content .discover-content-wrapper .card .card-inner img {
   margin-bottom: 0.5rem;
@@ -206,6 +213,10 @@ p {
 .channel-page {
   color: #fff;
   background-color: #222121;
+  padding-bottom: calc(61px + 1rem);
+}
+.channel-page .channel-page-wrapper {
+  overflow-y: auto;
 }
 .channel-page .channel-page-wrapper .channel-page-content-two img {
   margin-bottom: 0.5rem;
@@ -215,7 +226,6 @@ p {
   font-size: 0.8125rem;
   color: #cacaca;
 }
-
 .nav {
   position: fixed;
   bottom: 0;
@@ -233,4 +243,60 @@ p {
 
 .active {
   color: #FEDC56;
+}
+
+.channel-card-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.channel-card-container .channel {
+  width: 100%;
+  border: 1px solid #333333;
+  border-radius: 0.8rem;
+  background-color: #141414;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  .channel-card-container .channel {
+    width: 50%;
+  }
+}
+@media (min-width: 1024px) {
+  .channel-card-container .channel:hover {
+    transition: 0.3s;
+    border: 1px solid #FEDC56;
+    cursor: pointer;
+  }
+}
+@media (min-width: 1440px) {
+  .channel-card-container .channel {
+    width: 33.333%;
+  }
+}
+.channel-card-container .channel .channel-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.channel-card-container .channel .channel-wrapper .channel-content-one {
+  margin-right: 1rem;
+  width: 40%;
+}
+.channel-card-container .channel .channel-wrapper .channel-content-one img {
+  border-radius: 50%;
+}
+.channel-card-container .channel .channel-wrapper .channel-content-two {
+  width: 60%;
+}
+.channel-card-container .channel .channel-wrapper .channel-content-two h4 {
+  text-transform: uppercase;
+}
+
+.icon-profile-wrapper {
+  margin-bottom: 1rem;
+  padding-top: 1rem;
+}
+.icon-profile-wrapper img {
+  border-radius: 50%;
 }/*# sourceMappingURL=global.css.map */
