--- a/app/components/css/_discover.scss
+++ b/app/components/css/_discover.scss
@@ -3,15 +3,12 @@
 @use "sass:math";
 
 .discover {
-  @extend %w-100-h-100;
   background-color: var.$background-color-primary;
   color: var.$text-color-primary;
   padding-bottom: calc(61px + 1rem);
-  overflow-y: auto;
   .discover-wrapper {
     @extend %wrap;
     .discover-content {
-      
       .heading-wrapper {
         display: flex;
         h1 {
@@ -55,8 +52,8 @@
       .discover-content-wrapper {
         display: flex;
         flex-wrap: wrap;
-        margin-right: -1rem;
-        margin-bottom: -1rem;
+        margin-right: -15px;
+        margin-bottom: -15px;
         .card {
           width: 100%;
           p {
@@ -69,8 +66,8 @@
             width: 33.333%;
           }
           .card-inner {
-            margin-right: 1rem;
-            margin-bottom: 1rem;
+            margin-right: 15px;
+            margin-bottom: 15px;
             img {
               margin-bottom: 0.5rem;
               border-radius: var.$card-border-radius;
