--- a/app/core/_common-elements.scss
+++ b/app/core/_common-elements.scss
@@ -2,6 +2,10 @@
 @use "../abstracts/mixins" as mix;
 @use "sass:math";
 
+body {
+  background-color: var.$background-color-primary;
+}
+
 a {
   color: var.$text-color-primary;
   text-decoration: none;
