--- a/app/core/_common-elements.scss
+++ b/app/core/_common-elements.scss
@@ -25,6 +25,9 @@ h4 {
 p {
   margin-bottom: 1rem;
 }
+.btn-100 {
+  width: 100%;
+}
 .btn-primary {
   border-radius: var.$border-radius;
   color: var.$text-color-secondary;
